--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body class="bg-gray-100 font-sans">
 
     <!-- Hero Section -->
-    <header class="bg-cover bg-center h-screen flex items-center justify-center" style="background-image: url('media/hero-background.jpg');">
+    <header class="bg-cover bg-center h-screen flex items-center justify-center" style="background-image: url('media/background_image.webp');">
         <div class="text-center text-white bg-black bg-opacity-50 p-8 rounded">
             <h1 class="text-4xl md:text-5xl font-bold mb-4">FraudZen Hackathon</h1>
             <p class="text-xl mb-6">Advancing Mobile Network Security, Privacy, and Fraud Detection</p>
