--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <section class="container mx-auto px-4 py-8 grid grid-cols-1 md:grid-cols-2 gap-6">
         <!-- Pole 1 -->
         <div class="bg-white shadow-md rounded-lg p-6">
-            <h3 class="text-2xl font-bold mb-2">Mobile Network Architecture</h3>
+            <h3 class="text-2xl font-bold mb-2">Mobile Network Architecture and Knowledge Extraction</h3>
             <p class="text-sm text-gray-600 mb-4">Exploring network architecture and data dynamics to enhance mobility and traffic simulations.</p>
             <strong>Objectives:</strong>
             <ul class="list-disc list-inside text-gray-700">
