--- a/index.html
+++ b/index.html
@@ -90,37 +90,19 @@
     </section>
     
     <!-- Registration Section -->
-    <!--  <section id="registration" class="container mx-auto px-4 py-16 bg-gray-50">
+    <section id="registration" class="container mx-auto px-4 py-16 bg-gray-50">
         <h2 class="text-3xl font-bold mb-6 text-center">Register for the Hackathon</h2>
         <p class="text-lg text-center mb-8">
             Register now to participate in the FraudZen Hackathon! Fill in your details to secure your spot.
         </p>
         <div class="text-center">
-            <a href="https://docs.google.com/forms/d/your-google-form-id" 
+            <a href="https://forms.gle/NXiojCM92nABirBw8" 
             target="_blank" 
             class="bg-blue-600 hover:bg-blue-700 text-white font-bold py-3 px-6 rounded">
                 Register Here
             </a>
         </div>
     </section>  
-    -->
-    <section id="registration" class="container mx-auto px-4 py-16 bg-gray-50">
-        <h2 class="text-3xl font-bold mb-6 text-center">Register for the Hackathon</h2>
-        <p class="text-lg text-center mb-8">
-            Register now to participate in the FraudZen Hackathon! Fill in your details below to secure your spot.
-        </p>
-        <div class="flex justify-center">
-            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScccuRlQ8YmzJn_tJRJT5qhRy7DDOGRCtY35dTMA2UT05LLaA/viewform?embedded=true" 
-                    width="100%" 
-                    height="1000" 
-                    style="max-width: 768px; border: none;" 
-                    frameborder="0" 
-                    marginheight="0" 
-                    marginwidth="0">
-                Loading…
-            </iframe>
-        </div>
-    </section>
 
      <!-- Event Details Section -->
      <section class="container mx-auto px-4 py-16 bg-gray-50">
