--- a/index.html
+++ b/index.html
@@ -137,11 +137,11 @@
         <h2 class="text-3xl font-bold mb-6 text-center">Event Details</h2>
         <div class="bg-white shadow-md rounded-lg p-6 mb-8">
             <h3 class="text-2xl font-bold mb-4">Event Venue</h3>
-            <p class="text-lg text-gray-700 mb-4">École Polytechnique - Université de Yaoundé I</p>
-            <p class="text-gray-600">Located at Pharmacie EMIA, Rte de Melen, Yaoundé, Cameroon.</p>
+            <p class="text-lg text-gray-700 mb-4">Département d'Informatique - Université de Yaoundé I</p>
+            <p class="text-gray-600">Located at Decanat Faculté des Sciences, Yaoundé, Cameroon.</p>
             <div class="mt-4">
                 <iframe 
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3980.7559787456894!2d11.497420976855292!3d3.8624557961113375!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x108bcfa23aace247%3A0xe07671abb10169f9!2sNational%20Advanced%20School%20of%20Engineering%2CYaounde!5e0!3m2!1sen!2sde!4v1730384339447!5m2!1sen!2sde" 
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3980.773418298677!2d11.497985575265266!3d3.8587361483805003!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x108bcfa26a447fed%3A0x476c3e610ec7893!2sBibliotheque%20du%20departement%20d&#39;informatique!5e0!3m2!1sen!2scm!4v1731343052098!5m2!1sen!2scm" 
                     width="100%" 
                     height="300" 
                     style="border:0;" 
