--- a/index.html
+++ b/index.html
@@ -152,8 +152,75 @@
         
         <div class="bg-white shadow-md rounded-lg p-6 mb-8">
             <h3 class="text-2xl font-bold mb-4">Event Schedule</h3>
-            <p class="text-lg text-gray-700 mb-4">Schedule to be defined</p>
+            <ul class="text-lg text-gray-700 space-y-4">
+                <li>
+                    <strong>18/11/2024:</strong> Kickoff meeting, 12h-16h
+                    <a href="https://github.com/aj-kouam/media/kickoff-photos" target="_blank" class="text-blue-600 underline ml-2">
+                        View Kickoff Meeting Photos
+                    </a>
+                </li>
+                <li>
+                    <strong>25/11/2024:</strong> Deadline for project idea submission 
+                    <a href="https://forms.gle/8JSnJMVV95uQqTKs9" 
+                    class="text-blue-600 underline ml-2"
+                    target="_blank">
+                    Upload your project idea (PDF)
+                    </a>
+                </li>
+            </ul>
         </div>
+        <!-- Resources Section -->
+        <div class="bg-white shadow-md rounded-lg p-6 mb-8">
+            <h3 class="text-2xl font-bold mb-4">Resources</h3>
+            <p class="text-lg text-gray-700 mb-4">
+                Access the slides and other materials for the event below:
+            </p>
+            <ul class="text-lg text-blue-600 space-y-2">
+                <li>
+                    <a href="media/slides.pdf" target="_blank" class="hover:underline">
+                        Event Slides
+                    </a>
+                </li>
+                <!-- Nested Papers List -->
+                <li>
+                    <span class="text-black">Suggested Papers:</span>
+                    <ul class="list-disc list-inside text-gray-700 mt-2">
+                        <li>
+                            <a href="media/papers/2301.02059v1.pdf" target="_blank" class="text-blue-600 hover:underline">
+                                Zen: LSTM-based generation of individual spatiotemporal cellular traffic with interactions
+                            </a>
+                        </li>
+                        <li>
+                            <a href="media/papers/1374688.1374695.pdf" target="_blank" class="text-blue-600 hover:underline">
+                                Working Day Movement Model
+                            </a>
+                        </li>
+                        <li>
+                            <a href="media/papers/A_Survey_and_Experimental_Study_on_Privacy-Preserving_Trajectory_Data_Publishing.pdf" target="_blank" class="text-blue-600 hover:underline">
+                                A Survey and Experimental Study on Privacy-Preserving Trajectory Data Publishing
+                            </a>
+                        </li>
+                        <li>
+                            <a href="media/papers/FraudZen.pdf" target="_blank" class="text-blue-600 hover:underline">
+                                Battle of Wits: To What Extent Can Fraudsters Disguise Their Tracks in International bypass Fraud?
+                            </a>
+                        </li>
+                        <li>
+                            <a href="media/papers/percom.pdf" target="_blank" class="text-blue-600 hover:underline">
+                                Measurement-driven mobile data traffic modeling in a large metropolitan area
+                            </a>
+                        </li>
+                        <li>
+                            <a href="media/papers/pmc.pdf" target="_blank" class="text-blue-600 hover:underline">
+                                On the Regularity of Human Mobility
+                            </a>
+                        </li>
+                    </ul>
+                </li>
+            </ul>
+            
+        </div>
+
 
         <!-- Organizer Information -->
         <div class="bg-white shadow-md rounded-lg p-6">
