results announce update

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <a href="#about" class="bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Learn More</a>
                 <a href="#registration" class="bg-green-600 hover:bg-green-700 text-white font-bold py-2 px-4 rounded">Register</a>
                 <!-- Added button for announcing winners -->
-                <a href="#winners" class="bg-yellow-600 hover:bg-yellow-700 text-white font-bold py-2 px-4 rounded">Announce Winners</a>
+                <a href="#winners" class="bg-yellow-600 hover:bg-yellow-700 text-white font-bold py-2 px-4 rounded">Meet the Winners!</a>
             </div>
         </div>
     </header>
@@ -132,7 +132,8 @@
                 Register Here
             </a>
         </div>
-    </section>    
+    </section>   
+
 
      <!-- Event Details Section -->
      <section class="container mx-auto px-4 py-16 bg-gray-50">
@@ -278,11 +279,11 @@
         </div>
 
         <!-- Hackathon Winners Section -->
-        <div id="winners" class="container mx-auto px-4 py-16">
-            <h2 class="text-3xl font-bold mb-6 text-center">Hackathon Winners</h2>
-            <p class="text-lg text-gray-700 text-center mb-6">We are excited to announce the teams that participated in the hackathon along with their innovative projects:</p>
+        <div id="winners" class="bg-white shadow-md rounded-lg p-6 mb-8">
+            <h3 class="text-2xl font-bold mb-6">Hackathon Winners!</h3>
+            <p class="text-lg text-gray-700 mb-6">We are excited to announce the teams that participated in the hackathon along with their innovative projects:</p>
             <ul class="text-lg text-gray-700">
-                <li><strong>Team Members:</strong> Suzy Audrey Mako Tchinda, Hermann Arnold Edu Guiedi, Eddy Dortial Ntatchinda Kebound</li>
+                <li><strong>Team Members:</strong> Suzy Audrey Mako Tchinda (L3, UY1), Hermann Arnold Edu Guiedi (L3, UY1), Eddy Dortial Ntatchinda Kebound (L2, UY1)</li>
                 <li><strong>Project Title:</strong> Prototype adaptatif pour la détection des fraudes de contournement par SIMBox</li>
                 <li><strong>Pole:</strong> Defensive Security</li>
             </ul>
