results announce update

--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
         <!-- Hackathon Winners Section -->
         <div id="winners" class="bg-white shadow-md rounded-lg p-6 mb-8">
             <h3 class="text-2xl font-bold mb-6">Hackathon Winners!</h3>
-            <p class="text-lg text-gray-700 mb-6">We are excited to announce the teams that participated in the hackathon along with their innovative projects:</p>
+            <p class="text-lg text-gray-700 mb-6">We are excited to announce the winning team of the hackathon along with their innovative projects:</p>
             <ul class="text-lg text-gray-700">
                 <li><strong>Team Members:</strong> Suzy Audrey Mako Tchinda (L3, UY1), Hermann Arnold Edu Guiedi (L3, UY1), Eddy Dortial Ntatchinda Kebound (L2, UY1)</li>
                 <li><strong>Project Title:</strong> Prototype adaptatif pour la détection des fraudes de contournement par SIMBox</li>
